--- a/index.html
+++ b/index.html
@@ -1,22 +1,23 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" >
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Instagram Downloader</title>
+  <meta charset="UTF-8">
+  <title>Instagram Downloader</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <main>
-        <header>
-            <input type="text" value="" placeholder="Paste link here...">
-            <button class="search" onclick="getMedia()">Get</button>
-        </header>
-        <section class="result">
-            <div class="image-placeholder"></div>
-            <p>Copy link of Image or Video you want to download from instagram</p>
-        </section>
-    </main>
-    <script src="app.js"></script>
+  <main>
+    <header class="navbar">
+      <input type="text" value="" placeholder="Paste link here...">
+      <button class="search" onclick="getMedia()">Get</button>
+    </header>
+    <section class="result">
+      <div class="image-placeholder"></div>
+      <p> Copy image or video link from Instagram and put it on the field given on the top. </p>
+    </section>
+  </main>
+  
+  <script  src="app.js"></script>
+ 
 </body>
 </html>
-https://www.instagram.com/p/CGh-54KqUwT/
